add favorite button

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
       "
     >
       <div class="brand">
-        <span class="album">IMDB</span>
-        <span class="coll">Clone</span>
+        <span class="logo1">IMDB</span>
+        <span class="logo2">Clone</span>
       </div>
 
       <div id="menu">
@@ -70,8 +70,8 @@
     <h2 id="result"></h2>
 
     <div id="content"></div>
-    <div id="movie"></div>
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/js/all.min.js"></script>
-    <script src="script1.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
